--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1873,6 +1873,43 @@ body {
 .cid-rwuGlgmk4F .card-title {
   text-align: center;
 }
+.cid-rwyF9VfAA7 {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #cccccc;
+}
+.cid-rwyF9VfAA7 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rwyF9VfAA7 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rwyF9VfAA7 .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rwyF9VfAA7 .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rwyF9VfAA7 .mbr-text {
+  color: #767676;
+}
+.cid-rwyF9VfAA7 .card-wrapper {
+  height: 100%;
+}
+@media (max-width: 767px) {
+  .cid-rwyF9VfAA7 .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-rwyF9VfAA7 .card-title {
+  text-align: center;
+}
 .cid-rwuUgq3DSj {
   padding-top: 30px;
   padding-bottom: 30px;
