--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1910,6 +1910,45 @@ body {
 .cid-rwyF9VfAA7 .card-title {
   text-align: center;
 }
+.cid-rwSbgdmyCg {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #cccccc;
+}
+.cid-rwSbgdmyCg h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rwSbgdmyCg p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rwSbgdmyCg .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rwSbgdmyCg .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rwSbgdmyCg .mbr-text {
+  color: #767676;
+}
+.cid-rwSbgdmyCg .card-wrapper {
+  height: 100%;
+}
+@media (max-width: 767px) {
+  .cid-rwSbgdmyCg .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-rwSbgdmyCg .mbr-text,
+.cid-rwSbgdmyCg .mbr-section-btn {
+  color: #4f4943;
+  text-align: left;
+}
 .cid-rwuUgq3DSj {
   padding-top: 30px;
   padding-bottom: 30px;
